tests/NormalTests/paczka1/fuzzy1/72333535.err
Error in line 1: A164 A164 8,8
Error in line 7: koeDJZ8qqy A747 31,2
Error in line 18: 9ZADqo A747 28,0
Error in line 14: 4K7R6 A164 21,0
Error in line 27: 9ZADqo A164 138,0
Error in line 29: 74eVx4Y A164 79,0
